--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -1,25 +1,21 @@
 
-.header
+/* .header
 {
     position: fixed;
     background-color: gainsboro;
     width: 100%;
     height: 100px;
     top: 0;
-    /* margin: 5px; */
-    /* border-style: solid;
-    border-radius: 20px;
-    border-width: 1px; */
+    left: 0;
 }
 
 
 .mainbody
 {
-    position: fixed;
     display: flex;
     margin-top: 100px;
-    height: 100%;
-    width: 100%;
+    width: 99vw;
+    height: 100vh;
 }
 
 .slidebar
@@ -45,4 +41,4 @@
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
-}
+} */
