--- a/src/Styles/Layout.scss
+++ b/src/Styles/Layout.scss
@@ -7,13 +7,14 @@
     width: 100%;
     height: auto;
     min-height: 60px;
-    min-width: 620px;
+    min-width: 375px;
     margin-top: 5px;
+    justify-content: space-between;
 
     .header-leftSite
     {
         display: flex;
-        width: 45%;
+        width: 250px;
         margin-left: 50px;
         margin-right: 50px;
         padding-top: 20px;
@@ -40,6 +41,7 @@
         {
             display: flex;
             padding-left:0;
+            margin: 0;
             align-items: center;
         }
 
@@ -94,35 +96,25 @@
 
 
 
-//// Main body
-.mainbody
-{
-    display: flex;
-    width: 100%;
-    height: 98vh;
-    margin-bottom: 5px;
-    background-color: white;
-}
-
-
-
 //// Navbar
-.navbar
+.navigationbar
 {
     margin-bottom: 10px;
     display: flex;
+    margin-bottom: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     height: auto;
     background-color: whitesmoke;
-    min-width: 620px;
+    min-width: 375px;
 
-    .navbar-ul
+    .navigationbar-ul
     {
         height: auto;
-        padding-left: 2.5px;
         display: flex;
         margin-top: 0px;
         margin-bottom: 0px;
-        margin-left: 15%;
+        padding-left: 0px;
         padding-top: 20px;
         padding-bottom: 20px;
         border-right-width: 1px;
@@ -130,13 +122,13 @@
         border-right-color:deepskyblue;
     }
 
-    .navbar-li
+    .navigationbar-li
     {
         list-style-type: none;
         height: auto;   
     }
 
-    .navbar-li-link
+    .navigationbar-li-link
     {
         border-left-width: 1px;
         border-left-style: solid;
@@ -148,41 +140,98 @@
         text-decoration: none;
     }
 
-    .navbar-li-link:hover
+    .navigationbar-li-link:hover
     {
         background-color: lightblue;
         color: red;
         font-weight: bold;
     }
 
-    .navbar-li-link:active
+    .navigationbar-li-link:active
     {
         background-color: white;
         color: black;
+    }
+
+    .navigationbar-left-empty
+    {
+        width: 20%;
+        min-width: 207px;
     }
 }
 
 
 
+//// Mobile droplist
+.mobile-navigationbar
+{
+    background-color: bisque;
+    display: none;
+    height: 50px;
+    margin-bottom: 5px;
+    justify-content:flex-end;
+    min-width: 375px;
+
+    .mobile-navigationbar-menuIcon
+    {
+        display: inline-block;
+        cursor: pointer;
+        margin-right: 15px;
+        padding-top: 5px;
+        padding-bottom: 4px;
+    }
+
+    .mobile-bar1, .mobile-bar2, .mobile-bar3
+    {
+        width: 35px;
+        height: 5px;
+        background-color: royalblue;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+}
+
+.mobile-sidebar
+{
+    display: none;
+}
+
+
+
+//// Main body
+.mainbody
+{
+    display: flex;
+    width: 100%;
+    height: 98vh;
+    margin-bottom: 5px;
+    background-color: white;
+    min-width: 375px;
+}
+
+
+
 //// Slidebar
-.slidebar
+.sidebar
 {
     background-color: lightblue;
     border-style: solid;
     border-radius: 20px;
     border-width: 0px;
     height: auto;
-    width: 15%;
+    width: 20%;
     min-width: 200px;
     margin-left: 5px;
+    padding-top: 30px;
 
     h4
     {
         margin: 0;
         margin-left: 15px;
+        font-size: large;
     }
 
-    .slidebar-ul
+    .sidebar-ul
     {
         border-top-style: solid;
         border-top-width: 1px;
@@ -192,26 +241,26 @@
         border-color:blueviolet;
         margin-left: 10px;
         margin-right: 10px;
-        margin-top: 40px;
+        margin-top: 5px;
         margin-bottom: 40px;
         padding-left: 0px;
         list-style-type: none;
         align-items: center;
     }
 
-    .slidebar-li
+    .sidebar-li
     {
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 20px;
     }
 
-    .slidebar-li-link
+    .sidebar-li-link
     {
         text-decoration: none;
     }
 
-    .slidebar-li-link-icon
+    .sidebar-li-link-icon
     {
         margin-right: 5px;
         vertical-align: text-top;
@@ -219,11 +268,114 @@
         height: 20px;
     }
 
-    .slidebar-li-link:hover
+    .sidebar-li-link:hover
     {
         text-decoration:underline;
         color: red;
     }
+
+    .sidebar-head
+    {
+        justify-content:flex-end;
+        display: flex;
+        margin-right: 15px;
+        margin-bottom: 30px;
+
+        .sidebar-head-menuIcon
+        {
+            display: inline-block;
+            cursor: pointer;
+        }
+
+        .bar1, .bar2, .bar3
+        {
+            width: 35px;
+            height: 5px;
+            background-color: royalblue;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+
+        .bar1
+        {
+            transform: translate(0, 11px) rotate(-45deg);
+        }
+
+        .bar2
+        {
+            opacity: 0;
+        }
+
+        .bar3
+        {
+            transform: translate(0, -11px) rotate(45deg);
+        }
+    }
+}
+
+
+
+//// Nastaveni sidebar ve forme closed
+.sidebar-closed
+{
+    @extend .sidebar;
+    background-color: bisque;
+    width: 70px;
+    min-width: 70px;
+
+    h4
+    {
+        display: none;
+    }
+
+    .sidebar-head
+    {
+        justify-content: center;
+        margin-right: 0px;
+    }
+
+    .sidebar-li-link-icon
+    {
+        vertical-align:middle;
+        width: 30px;
+        height: 30px;
+    }
+
+    .sidebar-li
+    {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+    }
+
+    .sidebar-li-link
+    {
+        font-size: 0;
+    }
+
+    .sidebar-head
+    {
+        .bar1 
+        {
+            transform: translate(0, 0px) rotate(0deg);
+        }
+            
+        .bar2 
+        {
+            opacity: 100;
+        }
+            
+        .bar3 
+        {
+            transform: translate(0, 0px) rotate(0deg);
+        }
+    }
+}
+
+.navigationbar-left-empty-sidebar-closed
+{
+    width: 77px;
+    min-width: 77px;
 }
 
 
@@ -236,8 +388,7 @@
     border-radius: 20px;
     border-width: 1px;
     border-color: rgb(196, 176, 176);
-    width: 85%;
-    min-width: 400px;
+    width: inherit;   
     height: auto;
     margin-left: 5px;
     margin-right: 5px;
@@ -246,11 +397,61 @@
 
 
 
-//// Pri velkem zmenseni okna prohlizece
+// Pri velkem zmenseni okna prohlizece
 @media screen and (max-width: 800px) 
 {
     .header
     {
-        flex-direction: column;
+        .header-leftSite
+        {
+            margin-left: 30px;
+            margin-right: 0px;
+            width: 150px;
+        }
+
+        .header-rightSite
+        {
+            margin-right: 20px;
+        }
+    }
+
+    .navigationbar
+    {
+        margin-bottom: 2px;
+
+        .navigationbar-ul
+        {
+            margin-left: 10px;
+        }
+
+        .navigationbar-left-empty
+        {
+            display: none;
+        }
+
+        .navigationbar-left-empty-sidebar-closed
+        {
+            display: none;
+        }
+    }
+
+    .mobile-navigationbar
+    {
+        display: flex;
+    }
+    
+    .sidebar
+    {
+        display: none;
+    }
+
+    .contentBody
+    {
+        width: 100%;
+    }
+
+    .mobile-sidebar
+    {
+        display: block;
     }
 }
