--- a/src/Styles/Styles.scss
+++ b/src/Styles/Styles.scss
@@ -1,4 +1,6 @@
 // Import others .scss
 @use './Layout.scss';
+@use './AddInzert.scss';
 @use './Components.scss';
+@use './Others.scss';
 @import '~bootstrap/scss/bootstrap.scss';
