Vytvoreni stranky Home

--- a/src/Styles/Styles.scss
+++ b/src/Styles/Styles.scss
@@ -1,6 +1,5 @@
 // Import others .scss
 @use './Layout.scss';
 @use './AddInzert.scss';
-@use './Components.scss';
-@use './Others.scss';
+@use './Home.scss';
 @import '~bootstrap/scss/bootstrap.scss';
