--- a/src/Styles/Styles.scss
+++ b/src/Styles/Styles.scss
@@ -2,4 +2,5 @@
 @use './Layout.scss';
 @use './AddInzert.scss';
 @use './Home.scss';
+@use './Price.scss';
 @import '~bootstrap/scss/bootstrap.scss';
