--- a/src/Styles/Styles.scss
+++ b/src/Styles/Styles.scss
@@ -3,4 +3,5 @@
 @use './AddInzert.scss';
 @use './Home.scss';
 @use './Price.scss';
+@use './Contact.scss';
 @import '~bootstrap/scss/bootstrap.scss';
