Pridani fullscreen pro fotky

--- a/src/Styles/Styles.scss
+++ b/src/Styles/Styles.scss
@@ -4,4 +4,5 @@
 @use './Home.scss';
 @use './Price.scss';
 @use './Contact.scss';
+@use './Inzerts.scss';
 @import '~bootstrap/scss/bootstrap.scss';
