--- a/src/Styles/Inzerts.scss
+++ b/src/Styles/Inzerts.scss
@@ -9,6 +9,11 @@
         display: block;
     }
 
+    .inzerts-search
+    {
+        margin: 10px;
+    }
+
     .inzerts-container
     {
         display: flex;
@@ -18,7 +23,8 @@
         {
             margin: 10px;
             padding: 10px;
-            width: 700px;
+            width: 650px;
+            max-width: 650px;
             height:min-content;
             background-color: bisque;
             //border-width: 1px;
