--- a/src/Styles/Inzerts.scss
+++ b/src/Styles/Inzerts.scss
@@ -21,10 +21,11 @@
 
         .inzerts-container-inzert
         {
+            font-size: 12px;
             margin: 10px;
             padding: 10px;
-            width: 650px;
-            max-width: 650px;
+            width: 450px;
+            max-width: 450px;
             height:min-content;
             background-color: bisque;
             //border-width: 1px;
