--- a/src/Styles/Layout.scss
+++ b/src/Styles/Layout.scss
@@ -1,6 +1,6 @@
 
 // Promenne
-$min-width: 500px;
+$min-width: 600px;
 
 
 
@@ -17,7 +17,7 @@ $min-width: 500px;
     justify-content: space-between;
 
     // Pro nazev Unison
-    .header-leftSite
+    .header-left
     {
         width: auto;
         margin-left: 50px;
@@ -37,14 +37,14 @@ $min-width: 500px;
     }
 
     // Pro Odkazi na socialni site
-    .header-rightSite
+    .header-right
     {
         width: auto;
         display:flex;
         margin-left: 50px;
         margin-right: 50px;
 
-        .header-rightSite-ul
+        .header-right-ul
         {
             display: flex;
             padding-left:0;
@@ -52,38 +52,38 @@ $min-width: 500px;
             align-items: center;
         }
 
-        .header-rightSite-li
+        .header-right-li
         {
             list-style-type: none;
         }
 
-        .header-rightSite-iconLink
+        .header-right-iconLink
         {
             padding-top: 20px;
             margin-right: 15px;
         }
 
-        .header-rightSite-iconFacebook
+        .header-right-iconFacebook
         {
             color: blueviolet;
             width: 30px;
             height: 30px;
         }
 
-        .header-rightSite-iconInstagram
+        .header-right-iconInstagram
         {
             color: green;
             width: 30px;
             height: 30px;
         }
 
-        .header-rightSite-iconFacebook:hover
+        .header-right-iconFacebook:hover
         {
             width: 35px;
             height: 35px;
         }
 
-        .header-rightSite-iconInstagram:hover
+        .header-right-iconInstagram:hover
         {
             width: 35px;
             height: 35px;
@@ -103,7 +103,6 @@ $min-width: 500px;
     min-width: $min-width;
     width: 100%;
 
-    // Leva cast (Pokud slidebar == short display none)
     .navigationbar-left-empty
     {
         transition: 0.3s;
@@ -111,92 +110,111 @@ $min-width: 500px;
         min-width: 257px;
     }
 
-    .navigationbar-center
+    .navigationbar-left-empty-sidebar-short
     {
-        width:auto;
+        transition: 0.3s;
+        width: 77px;
+        min-width: 77px;
+    }
 
-        .navigationbar-center-ul
+    .navigationbar-container
+    {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        .navigationbar-container-left
         {
-            height: auto;
-            display: flex;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            padding-left: 0px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            width: auto;   
+            .navigationbar-container-left-ul
+            {
+                height: auto;
+                display: flex;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                padding-left: 0px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                width: auto;   
+            }
+
+            .navigationbar-container-left-li
+            {
+                list-style-type: none;
+                height: auto;   
+            }
+
+            // leva strana ma border i v levo
+            .navigationbar-container-left-li-link-left
+            {
+                border-left-width: 1px;
+                border-left-style: solid;
+                border-left-color:deepskyblue;
+                border-right-width: 1px;
+                border-right-style: solid;
+                border-right-color:deepskyblue;
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                text-decoration: none;
+            }
+
+            // Zbytek staci border pouze v pravo
+            .navigationbar-container-left-li-link
+            {
+                border-right-width: 1px;
+                border-right-style: solid;
+                border-right-color:deepskyblue;
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                text-decoration: none;
+            }
+
+            // Leva strana musi mit svuj "hover"
+            .navigationbar-container-left-li-link-left:hover
+            {
+                background-color: lightblue;
+                color: red;
+                font-weight: bold;
+            }
+
+            .navigationbar-container-left-li-link:hover
+            {
+                background-color: lightblue;
+                color: red;
+                font-weight: bold;
+            }
+
+            // Aktivni stranka zustava zvyraznena
+            .navigationbar-container-left-li-link-active
+            {
+                @extend .navigationbar-container-left-li-link;
+                background-color: lightblue;
+                color: red;
+                font-weight: bold;
+            }
         }
 
-        .navigationbar-center-li
+        .navigationbar-container-right
         {
-            list-style-type: none;
-            height: auto;   
-        }
+            width: auto;
+            display:flex;
+            right: 50px;
+            margin-left: 50px;
+            margin-right: 50px;
 
-        // leva strana ma border i v levo
-        .navigationbar-center-li-link-left
-        {
-            border-left-width: 1px;
-            border-left-style: solid;
-            border-left-color:deepskyblue;
-            border-right-width: 1px;
-            border-right-style: solid;
-            border-right-color:deepskyblue;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            text-decoration: none;
-        }
-
-        // Zbytek staci border pouze v pravo
-        .navigationbar-center-li-link
-        {
-            border-right-width: 1px;
-            border-right-style: solid;
-            border-right-color:deepskyblue;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            text-decoration: none;
-        }
-
-        // Leva strana musi mit svuj "hover"
-        .navigationbar-center-li-link-left:hover
-        {
-            background-color: lightblue;
-            color: red;
-            font-weight: bold;
-        }
-
-        .navigationbar-center-li-link:hover
-        {
-            background-color: lightblue;
-            color: red;
-            font-weight: bold;
-        }
-
-        // Aktivni stranka zustava zvyraznena
-        .navigationbar-center-li-link-active
-        {
-            @extend .navigationbar-center-li-link;
-            background-color: lightblue;
-            color: red;
-            font-weight: bold;
+            .navigationbar-container-right-loggin
+            {
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 12px;
+                padding-bottom: 10px;
+            }
         }
     }
 }   
-
-
-
-//// Navigationbar ve forme short
-.navigationbar-left-empty-sidebar-short
-{
-    transition: 0.3s;
-    width: 77px;
-    min-width: 77px;
-}
 
 
 
@@ -586,13 +604,13 @@ $min-width: 500px;
     // Header
     .header
     {
-        .header-leftSite
+        .header-left
         {
             margin-left: 30px;
             margin-right: 0px;
         }
 
-        .header-rightSite
+        .header-right
         {
             margin-right: 20px;
         }
@@ -608,11 +626,25 @@ $min-width: 500px;
             display: none;
         }
 
-        .navigationbar-center
+        .navigationbar-container
         {
-            .navigationbar-center-ul
+            .navigationbar-container-left
             {
-                margin-left: 10px;
+                .navigationbar-container-left-ul
+                {
+                    margin-left: 10px;
+                }
+            }
+
+            .navigationbar-container-right
+            {
+                margin-right: 20px;
+                margin-left: 0px;
+
+                // .navigationbar-container-right-loggin
+                // {
+                //     margin-right: 0px;
+                // }
             }
         }
     }
